# baseline-trace-graph

./: .gitignore  CLAUDE.md  README.md
.github/workflows/: deploy.yml
docs/: architecture.md  deploy.md
pipeline/: pyproject.toml
pipeline/src/btgraph/: __init__.py  cache.py  classifier.py  cli.py  content.py  evidence.py  models.py  openalex.py  pruning.py  query_detect.py  s2.py  summary.py
pipeline/src/btgraph/commands/: classify_papers.py  expand_candidates.py  export_site.py  extract_evidence.py  fetch_content.py  prune_graph.py  resolve_seed.py  summarize_edges.py
prompts/: README.md
schemas/: edge.schema.json  graph.schema.json  paper.schema.json  run_manifest.schema.json
scripts/: README.md
site/: README.md  index.html  package-lock.json  package.json  vite.config.ts
site/public/: sample_graph.json  sample_side_tables.json
site/src/: App.tsx  layout.ts  style.css  types.ts
site/src/components/: EdgeDetail.tsx  FilterBar.tsx  GraphView.tsx  NodeDetail.tsx  SideTables.tsx
site/src/hooks/: useGraphData.ts
