[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.build_meta"

[project]
name = "btgraph"
version = "0.1.0"
description = "Baseline-trace graph pipeline CLI"
requires-python = ">=3.10"
dependencies = [
    "httpx>=0.27,<1",
]

[project.scripts]
btgraph = "btgraph.cli:main"

[tool.setuptools.packages.find]
where = ["src"]
